[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Character.gd" type="Script" id=1]
[ext_resource path="res://Objects/Models/Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sfx/die3.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/particles/bloodSplash.tscn" type="PackedScene" id=4]
[ext_resource path="res://bin/charMovement.gdns" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 55.2816

[node name="Character" type="KinematicBody2D" groups=[
"Actor",
"Damageable",
]]
show_behind_parent = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 100.0

[node name="Model" parent="." instance=ExtResource( 2 )]

[node name="bloodSplash" parent="." instance=ExtResource( 4 )]
amount = 24
lifetime = 2.5
explosiveness = 0.69

[node name="ptween" type="Tween" parent="."]
__meta__ = {
"_editor_description_": "Tweens position of char"
}

[node name="movmtCPP" type="Node" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": "CPP code for character movement"
}

[node name="dtween" type="Tween" parent="."]
__meta__ = {
"_editor_description_": "Tweens death"
}

[node name="die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
max_distance = 800.0

[node name="close_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="close_range"]
shape = SubResource( 1 )

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="close_range" to="." method="_on_close_range_body_entered"]
[connection signal="body_exited" from="close_range" to="." method="_on_close_range_body_exited"]
[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
